--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "axios": "^1.12.2",
@@ -22,8 +24,10 @@
     "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.73.0",
+    "jest": "^29.7.0",
     "typescript": "~5.9.2"
   },
   "private": true
